netdox/plugins/kubernetes/src/templates/simple.yml
#  Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <depname>
  labels:
    instance: <depname>
    app: simple
    hostUrl: <domain>
spec:
  selector:
    matchLabels:
      instance: <depname>
      app: simple
      hostUrl: <domain>
  replicas: 1
  template:
    metadata:
      labels:
        instance: <depname>
        app: simple
        hostUrl: <domain>
    spec:
      containers:
        - name: <containername>
          image: <image>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: persistent-storage
              mountPath: <mount_path>
              subPath: <sub_path>
      imagePullSecrets:
        - name: registry-gitlab
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: <pvc>
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: <depname>
  labels:
    instance: <depname>
    app: simple
    hostUrl: <domain>
spec:
  ports:
    - port: 8080
  selector:
    instance: <depname>
    app: simple
    hostUrl: <domain>
  type: NodePort
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: <depname>
spec:
  rules:
    - host: <domain>
      http:
        paths:
          - backend:
              serviceName: <depname>
              servicePort: 8080
  tls:
    - hosts:
        - <domain>
      secretName: <depname>-tls
